# farm-class

./: Animal.cpp  Animal.h  Horse.cpp  Horse.h  People.cpp  People.h  Snake.cpp  Snake.h  animals.cpp  animals.h  main.cpp  meson.build
